# U3-PS3Recomp

./: .gitignore  CONTRIBUTORS.md  README.md  build.bat
.claude/: settings.local.json
docs/: NID_SYSTEM.md  SPU_FALLBACK.md  SPU_LIFTER.md  TOOLS.md  drill-down-psn.md
include/ps3emu/: guest_call.h  nid.h
libs/network/: cellNetCtl.c  cellNetCtl.h  sceNp.c  sceNp.h
libs/system/: cellGame.c  cellGame.h  cellSysutil.c  cellSysutil.h  sysPrxForUser.c  sysPrxForUser.h
libs/video/: cellGcmSys.c  cellGcmSys.h  cellVideoOut.c  cellVideoOut.h  rsx_commands.c  rsx_commands.h  rsx_d3d12_backend.c  rsx_null_backend.c
projects/uncharted3/: CMakeLists.txt  README.md  ROADMAP_LONGTERM.md  STATUS_AND_ROADMAP.md  STEP5_LIFTING.md  build.bat  build_game.bat  clean_428_flow_probe.py  clean_428_r30_probe.py  clean_8ac_probe.py  clean_9548_probe.py  clean_962e_probe.py  clean_abed98_11008_probe.py  clean_debug_probes.py  config.toml  edge0_fns.json  main.cpp  patch_38fbc_entry_probe.py  patch_428_flag_probe.py  patch_428_flow_probe.py  patch_428_r30_probe.py  patch_428_toc_reload.py  patch_63d34_probe.py  patch_64f288_toc_probe.py  patch_73bce4_r31_probe.py  patch_74a438_gcm_rollover.py  patch_74b_gcm_context_lock.py  patch_74e9d0_sp_probe.py  patch_767a18_allocator_probe.py  patch_8ac438_r30_fix.py  patch_8ac_probe.py  patch_8b60bc_fallthrough.py  patch_8b6f8c_state_probe.py  patch_93c370_path_probe.py  patch_9548_probe.py  patch_962e_probe.py  patch_a6e140_sp_probe.py  patch_abed98_11008_probe.py  patch_abed98_field58_probe.py  patch_abed98_stfsu_fix.py  (+24 more)
projects/uncharted3/analysis/: ANALYSIS_REPORT.md  elf_info.json  functions.json  functions_new.json  functions_old.json.bak  system_symbols.txt
projects/uncharted3/analysis_imports/: EBOOT_1.19.functions.json  EBOOT_1.19.image.json  EBOOT_1.19.imports.json  EBOOT_1.19.loader.json  rpcs3_cellspurs_names.txt
projects/uncharted3/compat/: dirent.h  ps3recomp_msvc_compat.h
projects/uncharted3/hdd0/game/BCES01175/USRDIR/data/fonts/: chinese.fnt  classic.fnt  game3.fnt  japanese.fnt  korean.fnt  main.fnt  russian.fnt  symbol3.fnt  test2.fnt
projects/uncharted3/recompiled/: .stream_state.json  ppu_recomp.h  ppu_recomp_mid0001.cpp  ppu_recomp_mid0002.cpp  ppu_recomp_mid0003.cpp  ppu_recomp_mid0004.cpp  ppu_recomp_mid0005.cpp  ppu_recomp_mid0006.cpp  ppu_recomp_mid0007.cpp  ppu_recomp_mid0008.cpp  ppu_recomp_mid0009.cpp  ppu_recomp_mid0010.cpp  ppu_recomp_mid0011.cpp  ppu_recomp_mid0012.cpp  ppu_recomp_mid0013.cpp  ppu_recomp_mid0017.cpp  ppu_recomp_mid0018.cpp  ppu_recomp_mid0019.cpp  ppu_recomp_mid0020.cpp  ppu_recomp_mid0021.cpp  ppu_recomp_mid0022.cpp  ppu_recomp_mid0023.cpp  ppu_recomp_mid0024.cpp  ppu_recomp_mid0025.cpp  ppu_recomp_mid0026.cpp  ppu_recomp_mid0027.cpp  ppu_recomp_mid0028.cpp  ppu_recomp_mid0029.cpp  ppu_recomp_mid0030.cpp  ppu_recomp_mid0031.cpp  ppu_recomp_mid0032.cpp  ppu_recomp_mid0033.cpp  ppu_recomp_table.cpp  ppu_recomp_unlifted_stubs.cpp
projects/uncharted3/spu_lifted/spu_0000/: spu_0000.c  spu_0000.h
projects/uncharted3/spu_lifted/spu_0001/: spu_0001.c  spu_0001.h
projects/uncharted3/spu_lifted/spu_0002/: spu_0002.c  spu_0002.h
projects/uncharted3/spu_lifted/spu_0003/: spu_0003.c  spu_0003.h
projects/uncharted3/spu_lifted/spu_0004/: spu_0004.c  spu_0004.h
projects/uncharted3/spu_lifted/spu_0005/: spu_0005.c  spu_0005.h
projects/uncharted3/spu_lifted/spu_0006/: spu_0006.c  spu_recomp.h
projects/uncharted3/spu_lifted/spu_0007/: spu_0007.c  spu_0007.h
runtime/ppu/: ppu_fs.cpp  ppu_hle.cpp  ppu_loader.cpp  ppu_memory.h  ppu_sysprx.cpp
runtime/ppu/tests/: boot_main.cpp
runtime/spu/: spu_channels.c  spu_context.h  spu_dma.h  spu_helpers.h  spu_interp.c
runtime/spu/tests/: gen_test_brsl_return.py  gen_test_dma.py  gen_test_shufb.py  gen_test_sum.py  run_tests.sh  test_brsl_return_main.c  test_dma_main.c  test_shufb_main.c  test_spu_helpers.c  test_sum_main.c
runtime/spu/tests/out_brsl_return/: spu_recomp.c  spu_recomp.h
runtime/spu/tests/out_dma/: spu_recomp.c
runtime/spu/tests/out_shufb/: spu_recomp.c
runtime/spu/tests/out_sum/: spu_recomp.c
runtime/syscalls/: lv2_register.c  lv2_syscall_table.h  spu_fallback.c  sys_event.c  sys_event.h  sys_fs.c  sys_fs.h  sys_memory.c  sys_ppu_thread.c  sys_ppu_thread.h  sys_timer.c  sys_vm.c  sys_vm.h
spu_gen/edge0/: edge0.c  edge0.h
spu_gen/policy/: policy.c  policy.h
spu_gen/policy2/: policy.c  policy_recomp.h
spu_gen/u3/: spu_0007.c  spu_recomp.h
tools/: extract_spu_images.py  find_functions.py  find_spu_functions.py  gen_hle_nids.py  gen_unlifted_stubs.py  generate_spu_interp.py  ghidra_analyze.py  ghidra_names.py  ida_analyze.py  nid_database.py  ppu_disasm.py  ppu_lifter.py  show_func.py  splice_lifted_functions.py  spu_disasm.py  spu_lifter.py  stream_lift.py  wrap_spu_elf.py
tools/ghidra/: ExportAnalysisJson.java
tools/harness/: ps3_recomp_harness.py
tools/tests/: test_spu_lifter.py
